# star

./: LICENSE  README.md  pyproject.toml
notebook/: demo.ipynb
star/: config.py  star.py  utils.py
